fixsed margine collapse, add paddings

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 * {
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -21,7 +22,7 @@ body {
 }
 
 .seach-bars {
-  margin: 20px 0;
+  padding: 20px 8px 0;
 }
 
 .seach-bars__form {
